--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <div class="promotion-hero">
-        <img class="promotion-hero__img" src="https://via.placeholder.com/1000x150" alt="">
+        <div class="promotion-hero__item">☺</div>
+        <div class="promotion-hero__item--primary">Halloween Sale</div>
+        <div class="promotion-hero__item">☺</div>
     </div>
     <div class="promotion">
         <div class="promotion__img">
